--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Bachelorarbeit"
+name = "triads"
 version = "0.1.0"
 authors = ["Michael Wernthaler <michael.wernthaler@posteo.de>"]
 edition = "2018"
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "ac_bench"
+harness = false
